src/main/java/com/example/blog/_core/util/error/ex/Exception401.java
package com.example.blog._core.util.error.ex;

public class Exception401 extends RuntimeException {

    public Exception401(String msg) {
        super(msg);
    }
}
